Add RRT in python

--- a/index.html
+++ b/index.html
@@ -29,15 +29,12 @@ sitemap:
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading">Motion and Manipulation planning in C++ and Python</h2>
+      <h2 class="featurette-heading">Motion and Manipulation planning in C++</h2>
       <p class="lead">
       HPP is a C++ Software Developement Kit implementing path planning for kinematic chains in environments cluttered with obstacles.
       Collision checking is performed by a modified version of the Flexible Collision Library developed at University of North Carolina.
 
-      A visualization tool is provided to visualize obstacles, robot configurations and paths.
       Robots can be loaded from URDF model.
-
-      Python scripting is implemented via CORBA servers and idl interfaces in a seamless way.
 
       It is a collection of software packages handled by cmake and pkg-config.
       </p>
@@ -47,6 +44,30 @@ sitemap:
     </div>
   </div>
 
+  <div class="row featurette">
+    <div class="col-md-5">
+      &nbsp;
+    </div>
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Python interface for quick prototyping of problems</h2>
+      <p class="lead">
+      Python scripting is implemented via CORBA servers and idl interfaces in a seamless way.
+      See <a href="{{ site.baseurl }}/{% post_url 2016-04-14-rrt-python %}">this example</a>.
+      </p>
+    </div>
+  </div>
+
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Shipped with a graphical user interface</h2>
+      <p class="lead">
+      A visualization tool is provided to visualize obstacles, robot configurations and paths.
+      </p>
+    </div>
+    <div class="col-md-5">
+      &nbsp;
+    </div>
+  </div>
   <!--
       <hr class="featurette-divider">
      <div class="row featurette">
