Update authors page and update versions of font-awesome and bootstrap

--- a/authors.html
+++ b/authors.html
@@ -15,41 +15,37 @@ sitemap:
 <div class="container marketing">
   <hr class="featurette-divider">
 
-
   <div class="row featurette">
-    <div class="col-md-5">
-      <img src="" alt= "Florent portait" class="img-rounded"> <!-- &nbsp; -->
+    <div class="col-md-2" style="text-align: center;">
+      <img src="http://projects.laas.fr/gepetto/img/Members/Florent_Lamiraux.png" alt= "Florent portait" class="img-rounded"> <!-- &nbsp; -->
     </div>
-    <div class="col-md-7">
+    <div class="col-md-10">
       <h2 class="featurette-heading">Florent Lamiraux, <span class="text-muted">Permanent researcher at LAAS-CNRS</span></h2>
-      <p class="lead">
-  </p>
-
+      <!--<p class="lead"> </p>-->
       <div>
-        <!--<a href="http://projects.laas.fr/gepetto/index.php/Members/FlorentLamiraux"><i class="fa fa-github-square fa-4x"></i></a>-->
-  <a href="https://github.com/florent-lamiraux"><i class="fa fa-github-square fa-4x"></i></a>
-  <!-- &nbsp;&nbsp;
-  <a href="http://stackoverflow.com/users/1043187/benc"><i class="fa fa-stack-exchange fa-4x"></i></a> -->
+        <a href="http://projects.laas.fr/gepetto/index.php/Members/FlorentLamiraux">
+          <i class="fa fa-user fa-2x" aria-hidden="true"></i></a>
+        &nbsp;
+        <a href="https://github.com/florent-lamiraux"><i class="fa fa-github fa-2x"></i></a>
       </div>
 
     </div>
   </div>
 
-<hr class="featurette-divider">
+  <hr class="featurette-divider">
 
   <div class="row featurette">
-    <div class="col-md-7">
+    <div class="col-md-10">
       <h2 class="featurette-heading">Joseph Mirabel , <span class="text-muted">PhD student at LAAS-CNRS </span></h2>
-      <p class="lead">
-      </p>
+      <!--<p class="lead"> </p>-->
 
       <div>
-	<!-- <a href="https://www.linkedin.com/in/moulard"><i class="fa fa-linkedin fa-4x"></i></a>
-	&nbsp;&nbsp; -->
-	<a href="https://github.com/jmirabel/"><i class="fa fa-github-square fa-4x"></i></a>
+        <a href="https://www.linkedin.com/in/josephmirabel"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+        &nbsp;
+        <a href="https://github.com/jmirabel/"><i class="fa fa-github fa-2x"></i></a>
       </div>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-2">
       <img src="" alt= "Joseph portait" class="img-rounded">
     </div>
   </div>
@@ -58,18 +54,17 @@ sitemap:
 
   <h2>Other Contributors</h2>
 
-  <p class="lead">
-    The following people are playing or played an important role in the development of Humanoid Path Planner:
-  </p>
+  <p>
+  The following people are playing or played an important role in the development of Humanoid Path Planner:
 
   <ul>
     <li>Steve Tonneau,</li>
     <li>Mylene Campana,</li>
     <li>Anna Seppala,</li>
     <li>Pierre Fernbach</li>
-    <li></li>
-    <li>Special thanks to Thomas Moulard and Benjamin Chrétien whose site <a href="http://www.roboptim.net" >RobOptim </a> inspired this one.
   </ul>
+  Special thanks to Thomas Moulard and Benjamin Chrétien whose site <a href="http://www.roboptim.net" >RobOptim </a> inspired this one.
+  </p>
 
   <div style="padding: 2em"></div>
 </div>
