--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@ sitemap:
 <div class="container">
   <div class="jumbotron">
     <a href="http://projects.laas.fr/gepetto/index.php">
-    <img src="{{ site.baseurl }}/assets/logo-medium-black.png" alt="Gepetto team logo"
-    style="max-width: 15%; vertical-align: middle;"/></a>
+    <img src="{{ site.baseurl }}/assets/logo-medium-black.png" alt="Gepetto team logo" align="left"
+    style="max-width: 15%; margin: 1em;"/></a>
 
-    <div style="display: inline-block; vertical-align: middle; margin-left: 3em;">
-      <h1>Humanoid Path Planner</h1>
+  <h1 style="display: inline-block;">Humanoid Path Planner</h1>
 
-      <p> Software for Motion and Manipulation Planning </p>
+  <p> Software for Motion and Manipulation Planning </p>
 
-      <p>
-      <a class="btn btn-lg btn-primary" href="getting-started.html" role="button">Get started now &raquo;</a>
-      </p>
-    </div>
-  </div>
+  <p>
+  <a class="btn btn-lg btn-primary" href="getting-started.html" role="button">Get started now &raquo;</a>
+  </p>
+</div>
 </div>
 
 <div style="padding: 2em"></div>
@@ -50,6 +48,7 @@ sitemap:
     </div>
   </div>
 
+  <hr class="featurette-divider">
   <div class="row featurette">
     <div class="col-md-5">
       <img src="{{ site.baseurl }}/assets/python-logo.png" alt="Python logo" style="max-width: 95%;" />
@@ -66,6 +65,7 @@ sitemap:
     </div>
   </div>
 
+  <hr class="featurette-divider">
   <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">Shipped with a graphical user interface</h2>
