--- a/download.html
+++ b/download.html
@@ -1,18 +1,56 @@
 ---
 layout: default
-title: Installation
+title: Download and install
 group: navigation
 disqus: no
 ---
 
-<h1 id="download" class="page-header">{{ page.title }}</h1>
+<h1 id="download_install" class="page-header">{{ page.title }}</h1>
 
-<h2>How to install HPP on your machine?</h2>
-
-<p>
-  The software architecture has been tested entirely on Ubuntu 12.04 LTS, and 14.04 LTS, respectively with ros-hydro and ros-indigo. Latest developpments are developped under Ubuntu 14.04 LTS.
-  If you are running other distributions, we expect the library to work correctly but we can not guarantee it.
-  Follow the instructions <a href="https://github.com/humanoid-path-planner/hpp-doc#readme">here</a>.
+<p class="lead">
+This page provides guidelines for installation of HPP. Several versions are available:
 </p>
+
+<select class="form-control" id="installation_branch" size="1" onchange="updateInstall(this.value)">
+  <option value=""      >          </option>
+  <option value="master">  Stable  </option>
+  <option value="devel">Development</option>
+  <option value="euroc-c1">Euroc - challenge 1</option>
+  <option value="euroc-c2">Euroc - challenge 2</option>
+</select>
+<hr class="featurette-divider">
+
+<div style="padding: 2em"></div>
+
+<div id="installation_devel">
+  <div id="installation_devel_readme" style="display:none;">
+  </div>
+  <div id="installation_devel_readme_rendered">
+  </div>
+
+</div>
+
+<script src="{{ site.baseurl }}/lib/markdown.js"></script>
+<script>
+function fetch (url, divRaw, divRend) {
+  $(divRaw).load(url, function() {
+      $(divRend).html(markdown.toHTML($('#installation_devel_readme').text()))
+      });
+}
+function updateInstall(branch) {
+  if (branch === "") {
+    $("#installation_devel_readme_rendered").html (
+        '<i class="fa fa-refresh fa-spin fa-2x fa-fw" aria-hidden="true"></i>' +
+        '<span class="sr-only"></span>' +
+        'Please select the version you want to install'
+        );
+  } else {
+    fetch("https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/" + branch + "/README.md",
+        "#installation_devel_readme",
+        "#installation_devel_readme_rendered");
+  }
+}
+updateInstall("");
+</script>
 
 <div style="padding: 2em"></div>
