Remove old getting-started.html file

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ sitemap:
       Python scripting is implemented via <a href="http://omniorb.sourceforge.net/">CORBA</a>
       servers and idl interfaces in a seamless way.
       A few lines of Python code allows users to
-      <a href="{{ site.baseurl }}/getting-started.html">solve motion planning problems</a> or
+      <a href="{{ site.baseurl }}/tutorials.html">solve motion planning problems</a> or
       <a href="{{ site.baseurl }}/{% post_url 2016-04-14-rrt-python %}">design an planning algorithm</a>.
       </p>
     </div>
