--- a/euroc-instructions.html
+++ b/euroc-instructions.html
@@ -8,7 +8,30 @@ disqus: no
 <h1 id="euroc_instructions" class="page-header">{{ page.title }}</h1>
 
 <p class="lead">
-Participants to the Euroc challenges should install an extended version of HPP
+
+There is a growing need for competitive solutions for the European robotics industry to maintain its
+leadership position in the domain of robotics manufacturing and services. To help boost inovation in
+the field of robotics in Europe, the Europe-wide competition for industrial robots <a href= http://www.euroc-project.eu> EuRoC</a> organises 
+the following challenges targeting European teams of academic as well as industrial background:
+
+1. Reconfigurable Interactive Manufacturing Cell (<a href= http://www.euroc-project.eu/index.php?id=challenge_1>Challenge 1</a>),
+2. Shop Floor Logistic and Manipulation (<a href= http://www.euroc-project.eu/index.php?id=challenge_2>Challenge 2</a>),
+3. Plant Servicing and Inspection (<a href= http://www.euroc-project.eu/index.php?id=challenge_3>Challenge 3</a>).
+
+Each challenge represents an industrially relative problem in the field of robotics, and features the most
+auspicious application scenarios envisoned for the future of the European robotics industry. The challenges
+are versatile, consisting of multiple stages and concentrating on different robotics applications each. Robots
+of various kinds are utilised (fixed-base manipulators, mobile robots and aereal vehicles such as drones) with
+their specific challenges and points of interest.
+
+The main aim of the EuRoC project is to bring the industrial and the research community closer to each other
+and promote active collaboration between the two, thus positively affecting the robotics industry in Europe.
+
+For the completion of the various tasks comprised by the three challenges, team Gepetto at LAAS-CNRS propose
+an extended version of the HPP software. It is delivered as a basis which challengers may use to implement
+their own solutions.
+
+Participants to the Euroc challenges should install the extended version of HPP
 from the <a href="{{ site.baseurl }}/download.html">download page</a>.
 
 These versions include robot models specific to each challenges as well as specific tutorials.
