set right challenge 2 repo in download.html

--- a/download.html
+++ b/download.html
@@ -16,7 +16,7 @@ This page provides guidelines for installation of HPP. Several versions are avai
   <option value="master">  Stable  </option>
   <option value="devel">Development</option>
   <option value="euroc-c1">Euroc - challenge 1</option>
-  <option value="euroc-c2">Euroc - challenge 2</option>
+  <option value="euroc">Euroc - challenge 2</option>
 </select>
 <hr class="featurette-divider">
 
