--- a/download.html
+++ b/download.html
@@ -17,6 +17,7 @@ This page provides guidelines for installation of HPP. Several versions are avai
   <option value="devel">Development</option>
   <option value="euroc-c1">Euroc - challenge 1</option>
   <option value="euroc">Euroc - challenge 2</option>
+  <option value="isae">ISAE - practice</option>
 </select>
 <hr class="featurette-divider">
 
