Update installation instructions for ISAE Practise.

--- a/download.html
+++ b/download.html
@@ -17,7 +17,7 @@ This page provides guidelines for installation of HPP. Several versions are avai
   <option value="devel">Development</option>
   <option value="euroc-c1">Euroc - challenge 1</option>
   <option value="euroc">Euroc - challenge 2</option>
-  <option value="isae">ISAE - practice</option>
+  <option value="isae-2017">ISAE - practice</option>
   <option value="rbprm">RBPRM installer</option>
   <option value="version-3">Old version without Pinocchio</option>
 </select>
