Add branch ubuntu-14.04

--- a/download.html
+++ b/download.html
@@ -19,6 +19,7 @@ This page provides guidelines for installation of HPP. Several versions are avai
   <option value="euroc">Euroc - challenge 2</option>
   <option value="isae-2017">ISAE - practice</option>
   <option value="rbprm">RBPRM installer</option>
+  <option value="ubuntu-14.04"> Stable - Ubuntu 14.04 </option>
   <option value="version-3">Old version without Pinocchio</option>
 </select>
 <hr class="featurette-divider">
