Use Gepetto jekyll-theme

--- a/authors.html
+++ b/authors.html
@@ -1,13 +1,7 @@
 ---
-layout: default
+layout: page
 title: Humanoid Path Planner Team
-sitemap:
-  lastmod: 2016-04-14
-  priority: 0.9
-  changefreq: yearly
 ---
-<h1 id="authors" class="page-header">{{ page.title }}</h1>
-
 <p class="lead">
   Who are we ?
 </p>
@@ -65,6 +59,4 @@ sitemap:
   </ul>
   Special thanks to Thomas Moulard and Benjamin Chrétien whose site <a href="http://www.roboptim.net" >RobOptim </a> inspired this one.
   </p>
-
-  <div style="padding: 2em"></div>
 </div>
