--- a/contributing.html
+++ b/contributing.html
@@ -1,11 +1,8 @@
 ---
-layout: default
+layout: page
 title: Contributing
-group: navigation
-disqus: no
+category: Development
 ---
-
-<h1 id="download_install" class="page-header">{{ page.title }}</h1>
 
 <p class="lead">
 In order to contribute to HPP, you have to install the development version on the
@@ -41,9 +38,7 @@ Here is a list of the most important packages, pointing to the corresponding git
 
 <h2 class="page-header">Dependency graph of HPP</h2>
 <img src="{{ site.baseurl }}/api/hpp-doc/images/dependencies.png"
-class="img-responsive"
+class="img-fluid"
 alt="Dependency graph of HPP"
 title="Dependency graph of HPP"/>
 <!--<div class="text-center"><em><strong>Dependency graph of HPP</em></div>-->
-
-<div style="padding: 2em"></div>
