--- a/euroc-instructions.html
+++ b/euroc-instructions.html
@@ -1,14 +1,11 @@
 ---
-layout: default
-title: Instructions for Euroc challengers
-group: navigation
-disqus: no
+layout: page
+title: Euroc challengers
+category: Development
 ---
 
-<h1 id="euroc_instructions" class="page-header">{{ page.title }}</h1>
-
 <p class="lead">
-There is a growing need for competitive solutions for the European robotics industry to maintain its 
+There is a growing need for competitive solutions for the European robotics industry to maintain its
 leadership position in the domain of robotics manufacturing and services. To help boost inovation in
 the field of robotics in Europe, the Europe-wide competition for industrial robots <a href= http://www.euroc-project.eu> EuRoC</a> organises
 the following challenges targeting European teams of academic as well as industrial background:
@@ -45,5 +42,3 @@ from the <a href="{{ site.baseurl }}/download.html">download page</a>.
 <p class ="lead">
 These versions include robot models specific to each challenges as well as specific tutorials.
 </p>
-
-<div style="padding: 2em"></div>
