--- a/index.html
+++ b/index.html
@@ -1,29 +1,7 @@
 ---
-layout: default
-title: Motion and Manipulation planning
-sitemap:
-  lastmod: 2016-10-06
-  priority: 0.9
-  changefreq: monthly
+layout: home
 ---
-<div class="container">
-  <div class="jumbotron">
-    <a href="http://projects.laas.fr/gepetto/index.php">
-    <img src="{{ site.baseurl }}/assets/logo-medium-black.png" alt="Gepetto team logo" align="left"
-    style="max-width: 15%; margin: 1em;"/></a>
 
-  <h1 style="display: inline-block;">Humanoid Path Planner</h1>
-
-  <p> Software for Motion and Manipulation Planning </p>
-
-  <p>
-  <a class="btn btn-lg btn-primary" href="#videos" role="button">See videos</a>
-  <a class="btn btn-lg btn-primary" href="download.html?branch=master" role="button">Get started now &raquo;</a>
-  </p>
-</div>
-</div>
-
-<div style="padding: 2em"></div>
 
 <div class="container marketing">
 
@@ -98,7 +76,7 @@ sitemap:
 <div style="padding: 2em"></div>
 
 <div id="videos">
-{% include carrousel.html carrousel=site.data.projects %}
+{% include carousel.html %}
 </div>
 
 <div style="padding: 2em"></div>
