Make warning clearer.

--- a/tutorials.html
+++ b/tutorials.html
@@ -83,8 +83,10 @@ This page provides tutorials to get you started with HPP.
   </div>
   <div class="tab-pane fade" id="tutorial_2" role="tabpanel" aria-labelledby="tutorial_2_tab">
     <p>
-      WARNING: this tutorial has been tested with installations instructions corresponding to branch "isae".
     </p>
+    <div class="alert alert-warning">
+      <strong>Warning!</strong> This tutorial has been tested with installations instructions corresponding to branch <em>isae</em>.
+    </div>
     <p>
     To run the tutorial, open a terminal and open 4 tabs by typing CTRL+SHIFT+T twice.
 
