--- a/tutorials.html
+++ b/tutorials.html
@@ -30,10 +30,10 @@ This page provides tutorials to get you started with HPP.
 
     <hr/>
 
-    <h4>Step 1 - Starting gepetto-viewer-server</h4>
+    <h4>Step 1 - Starting gepetto-gui</h4>
     <p>
     In the first tab, type
-    {% highlight bash %} $ gepetto-viewer-server {% endhighlight %}
+    {% highlight bash %} $ gepetto-gui {% endhighlight %}
 
     Nothing apparently happens, but the graphical user interface is ready to create a new window and to display a scene.
     </p>
@@ -48,7 +48,7 @@ This page provides tutorials to get you started with HPP.
 
     See package hpp-corbaserver for details.
 
-    Note that gepetto-viewer-server and hppcorbaserver executables are completely independent.
+    Note that gepetto-gui and hppcorbaserver executables are completely independent.
     </p>
 
     <hr/>
@@ -95,10 +95,10 @@ This page provides tutorials to get you started with HPP.
 
     <hr/>
 
-    <h4>Step 1 - Starting gepetto-viewer-server</h4>
+    <h4>Step 1 - Starting gepetto-gui</h4>
     <p>
     In the first tab, type
-    {% highlight bash %} $ gepetto-viewer-server {% endhighlight %}
+    {% highlight bash %} $ gepetto-gui {% endhighlight %}
 
     Nothing apparently happens, but the graphical user interface is ready to create a new window and to display a scene.
     </p>
