Update DEVEL_DIR -> DEVEL_HPP_DIR.

--- a/documentation.html
+++ b/documentation.html
@@ -9,7 +9,7 @@ disqus: no
 
 <div class="alert alert-primary" role="alert">
   <strong>Warning!</strong> If you have installed HPP, the documentation corresponding to <em>your version</em>
-  of HPP is installed in <code>${DEVEL_DIR}/share/doc/hpp-doc/index.html</code>.
+  of HPP is installed in <code>${DEVEL_HPP_DIR}/share/doc/hpp-doc/index.html</code>.
 </div>
 
 <div class="center-block text-center">
