--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@ layout: home
           </a>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12" style="padding-top:0.5em; padding-bottom:0.5em;">
+          <img title="ROB4FAM" id="rob4fam_logo" src="{{ site.baseurl }}/assets/logo_rob4fam.png" alt="Logo ROB4FAM" style="height: 60px;"/>
+        </div>
+      </div>
     </div>
     <div class="col-md-5">
       <h2 class="featurette-heading">Acknowledgement</h2>
@@ -47,6 +52,7 @@ layout: home
         <li>ERC Actanthrope</li>
         <li>PSPC Romeo 2</li>
         <li>ANR Entracte</li>
+        <li>ROB4FAM</li>
       </ul>
       </p>
     </div>
