--- a/index.html
+++ b/index.html
@@ -53,25 +53,28 @@ layout: home
         <li>PSPC Romeo 2</li>
         <li>ANR Entracte</li>
         <li>ROB4FAM</li>
+        <li>RoboCom++</li>
       </ul>
       </p>
     </div>
     <div class="col-md-2 text-center">
       <div class="row">
-        <div class="col-md-12">
-          <a href="https://ec.europa.eu/research/fp7/index_en.cfm">
-            <img title="Framework Program 7" id="FP7_logo" src="{{ site.baseurl }}/assets/logo-FP7.jpg" alt="Framework Program 7"
-            style="height: 110px;"/>
-          </a>
-        </div>
-        <div class="row">
-          <div class="col-md-12" style="padding-top:0.5em; padding-bottom:0.5em;">
-            <a href="http://www.agence-nationale-recherche.fr">
-              <img title="ANR project" id="anr_logo" src="{{ site.baseurl }}/assets/logo_anr.gif" alt="Logo ANR project"
-              style="height: 70px;"/>
-            </a>
-          </div>
-        </div>
+       <a href="https://ec.europa.eu/research/fp7/index_en.cfm">
+          <img title="Framework Program 7" id="FP7_logo" src="{{ site.baseurl }}/assets/logo-FP7.jpg" alt="Framework Program 7"
+          style="height: 110px;"/>
+        </a>
+      </div>
+      <div class="row">
+        <a href="http://www.agence-nationale-recherche.fr">
+          <img title="ANR project" id="anr_logo" src="{{ site.baseurl }}/assets/logo_anr.gif" alt="Logo ANR project"
+          style="height: 70px;"/>
+        </a>
+      </div>
+      <div class="row">
+        <a href="http://robocomplusplus.eu/">
+          <img title="RoboCom++" id="robocom++_logo" src="{{ site.baseurl }}/assets/logo_robocom_def_png.png" alt="RoboCom++"
+          style="height: 110px;"/>
+        </a>
       </div>
     </div>
   </div>
