Update gepetto url
  https://projects.laas.fr/gepetto -> https://gepettoweb.laas.fr.

--- a/authors.html
+++ b/authors.html
@@ -11,13 +11,13 @@ title: Humanoid Path Planner Team
 
   <div class="row featurette">
     <div class="col-md-2" style="text-align: center;">
-      <img src="http://projects.laas.fr/gepetto/img/Members/Florent_Lamiraux.png" alt= "Florent portait" class="img-rounded"> <!-- &nbsp; -->
+      <img src="https://gepettoweb.laas.fr/img/Members/Florent_Lamiraux.png" alt= "Florent portait" class="img-rounded"> <!-- &nbsp; -->
     </div>
     <div class="col-md-10">
       <h2 class="featurette-heading">Florent Lamiraux, <span class="text-muted">Permanent researcher at LAAS-CNRS</span></h2>
       <!--<p class="lead"> </p>-->
       <div>
-        <a href="http://projects.laas.fr/gepetto/index.php/Members/FlorentLamiraux">
+        <a href="https://gepettoweb.laas.fr/index.php/Members/FlorentLamiraux">
           <i class="fa fa-user fa-2x" aria-hidden="true"></i></a>
         &nbsp;
         <a href="https://github.com/florent-lamiraux"><i class="fa fa-github fa-2x"></i></a>
