--- a/download.html
+++ b/download.html
@@ -11,14 +11,14 @@ This page provides guidelines for installation of HPP. Several versions are avai
 <select class="form-control" id="installation_branch" size="1" onchange="updateInstall(this.value)">
   <option value=""></option>
   <option value="binary">Stable - Binary</option>
-  <option value="master">Stable - Source install</option>
+  <option value="master">Stable - Source</option>
   <option value="devel">Development - Source</option>
-  <option value="euroc-c1">Euroc - challenge 1</option>
-  <option value="euroc">Euroc - challenge 2</option>
-  <option value="isae-2017">ISAE - practice</option>
   <option value="rbprm">RBPRM installer</option>
-  <option value="ubuntu-16.04"> Stable - Ubuntu 16.04 </option>
-  <option value="ubuntu-14.04"> Stable - Ubuntu 14.04 </option>
+  <option value="euroc-c1">OLD - Euroc - challenge 1</option>
+  <option value="euroc">OLD - Euroc - challenge 2</option>
+  <option value="isae-2017">OLD - ISAE - practice</option>
+  <option value="ubuntu-16.04">OLD - Stable - Ubuntu 16.04 </option>
+  <option value="ubuntu-14.04">OLD - Stable - Ubuntu 14.04 </option>
   <option value="version-3">Old version without Pinocchio</option>
 </select>
 <hr class="featurette-divider">
@@ -37,8 +37,8 @@ var converter = new showdown.Converter();
 var rendered = document.getElementById("installation_devel_readme_rendered");
 
 var urls = {
-  'binary'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/instructions/binary.md",
-  'master'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/instructions/master-sources.md",
+  'binary'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/instructions/stable-binary.md",
+  'master'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/instructions/stable-sources.md",
   'devel'        : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/instructions/devel-sources.md",
   'euroc-c1'     : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/euroc-c1/doc/instructions.md",
   'euroc'        : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/euroc/doc/instructions.md",
