--- a/download.html
+++ b/download.html
@@ -11,7 +11,7 @@ This page provides guidelines for installation of HPP. Several versions are avai
 <select class="form-control" id="installation_branch" size="1" onchange="updateInstall(this.value)">
   <option value=""></option>
   <option value="binary">Stable - Binary</option>
-  <option value="master">Stable - Source</option>
+  <option value="stable">Stable - Source</option>
   <option value="devel">Development - Source</option>
   <option value="rbprm">RBPRM installer</option>
   <option value="euroc-c1">OLD - Euroc - challenge 1</option>
@@ -37,9 +37,9 @@ var converter = new showdown.Converter();
 var rendered = document.getElementById("installation_devel_readme_rendered");
 
 var urls = {
-  'binary'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/instructions/stable-binary.md",
-  'master'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/instructions/stable-sources.md",
-  'devel'        : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/instructions/devel-sources.md",
+  'binary'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/stable/instructions/stable-binary.md",
+  'stable'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/stable/instructions/stable-sources.md",
+  'devel'        : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/stable/instructions/devel-sources.md",
   'euroc-c1'     : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/euroc-c1/doc/instructions.md",
   'euroc'        : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/euroc/doc/instructions.md",
   'isae-2017'    : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/isae-2017/doc/instructions.md",
