Fix key in url dictionary + typo

--- a/download.html
+++ b/download.html
@@ -12,8 +12,8 @@ This page provides guidelines for installation of HPP. Several versions are avai
   <option value=""></option>
   <option value="binary">Stable - Binary</option>
   <option value="stable">Stable - Source</option>
+  <option value="conda">Stable - Conda environment and package</option>
   <option value="devel">Development - Source</option>
-  <option value="conda">Stable - conda environment and package</option>
   <option value="rbprm">RBPRM installer</option>
   <option value="euroc-c1">OLD - Euroc - challenge 1</option>
   <option value="euroc">OLD - Euroc - challenge 2</option>
@@ -40,8 +40,8 @@ var rendered = document.getElementById("installation_devel_readme_rendered");
 var urls = {
   'binary'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/stable/instructions/stable-binary.md",
   'stable'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/stable/instructions/stable-sources.md",
+  'conda'        : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/stable/instructions/conda-packages.md",
   'devel'        : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/stable/instructions/devel-sources.md",
-  'stable'       : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/stable/instructions/conda-packages.md",
   'euroc-c1'     : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/euroc-c1/doc/instructions.md",
   'euroc'        : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/euroc/doc/instructions.md",
   'isae-2017'    : "https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/isae-2017/doc/instructions.md",
